syntax = "proto3";

package blog;

option go_package = "github.com/AndreAppolariFilho/grpc-go-course/blog/blogpb";

import "google/protobuf/empty.proto";

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}
message BlogId{
    string id = 1;
}
service BlogService {
    rpc CreateBlog (Blog) returns (BlogId);
    rpc ReadBlog (BlogId) returns (Blog); // return NOT_FOUND if not found
    rpc UpdateBlog (Blog) returns (google.protobuf.Empty); // return NOT_FOUND if not found
    rpc DeleteBlog (BlogId) returns (google.protobuf.Empty); // return NOT_FOUND if not found
    rpc ListBlog (google.protobuf.Empty) returns (stream Blog);
}